--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,4 +34,7 @@ jobs:
           echo "$SSH_KEY" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -H tfdf63.beget.tech >> ~/.ssh/known_hosts
-          scp -r out/* tfdf63_tfdf@tfdf63.beget.tech:
+          # Копируем все файлы из out
+          scp -r out/* tfdf63_tfdf@tfdf63.beget.tech:public_html/
+          # Копируем .htaccess для правильной маршрутизации
+          scp .htaccess tfdf63_tfdf@tfdf63.beget.tech:public_html/
