--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,6 @@ jobs:
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -H tfdf63.beget.tech >> ~/.ssh/known_hosts
           # Копируем все файлы из out
-          scp -r out/* tfdf63_tfdf@tfdf63.beget.tech:public_html/
+          scp -r out/* tfdf63_tfdf@tfdf63.beget.tech:
           # Копируем .htaccess для правильной маршрутизации
-          scp .htaccess tfdf63_tfdf@tfdf63.beget.tech:public_html/
+          scp .htaccess tfdf63_tfdf@tfdf63.beget.tech:
