--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,25 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # Перенаправляем все остальные запросы на index.html
 RewriteRule ^(.*)$ index.html [L]
 
+# Базовые заголовки безопасности
+<IfModule mod_headers.c>
+    Header set X-Content-Type-Options "nosniff"
+    Header set X-Frame-Options "SAMEORIGIN"
+    Header set X-XSS-Protection "1; mode=block"
+    Header set Referrer-Policy "strict-origin-when-cross-origin"
+    Header set Permissions-Policy "geolocation=(), microphone=(), camera=()"
+    
+    # Настройка SameSite для cookies
+    Header edit Set-Cookie ^(.*)$ $1;SameSite=Lax
+    
+    # Отключаем кэширование для HTML файлов
+    <FilesMatch "\.(html|htm)$">
+        Header set Cache-Control "no-cache, no-store, must-revalidate"
+        Header set Pragma "no-cache"
+        Header set Expires 0
+    </FilesMatch>
+</IfModule>
+
 # Включаем сжатие
 <IfModule mod_deflate.c>
     AddOutputFilterByType DEFLATE text/plain
@@ -19,6 +38,7 @@ RewriteRule ^(.*)$ index.html [L]
     AddOutputFilterByType DEFLATE application/rss+xml
     AddOutputFilterByType DEFLATE application/javascript
     AddOutputFilterByType DEFLATE application/x-javascript
+    AddOutputFilterByType DEFLATE application/json
 </IfModule>
 
 # Кэширование статических файлов
@@ -28,6 +48,19 @@ RewriteRule ^(.*)$ index.html [L]
     ExpiresByType image/jpeg "access plus 1 year"
     ExpiresByType image/gif "access plus 1 year"
     ExpiresByType image/png "access plus 1 year"
+    ExpiresByType image/webp "access plus 1 year"
     ExpiresByType text/css "access plus 1 month"
     ExpiresByType application/javascript "access plus 1 month"
-</IfModule> 
+    ExpiresByType application/json "access plus 0 seconds"
+    ExpiresByType application/xml "access plus 0 seconds"
+    ExpiresByType text/xml "access plus 0 seconds"
+</IfModule>
+
+# Защита от просмотра содержимого директорий
+Options -Indexes
+
+# Защита файлов
+<FilesMatch "^\.">
+    Order allow,deny
+    Deny from all
+</FilesMatch> 
